syntax = "proto3";

option java_package = "com.example.grpcservicedemo.grpc";

// The country service definition.
service CountryService {
    // Retrieve requested countries by ID
    rpc getCountries(CountryRequest) returns (CountriesResponse) {}
}

message CountryRequest {
    repeated string id = 1;
}

// The response message containing countries
message CountriesResponse {
    repeated string country = 1;
}
